--- a/src/app/pages/cuenta-detalle/cuenta-detalle.page.html
+++ b/src/app/pages/cuenta-detalle/cuenta-detalle.page.html
@@ -300,7 +300,7 @@
             <ion-row class="row-widht">
               <ion-col size="6" class="col-padding-left">
                 <h6 class="h6-list-titulo">{{ 'Fecha efectividad' | translate }}</h6>
-                <p class="p-blanco-descripcion">{{ cuenta?.fecha_efectividad }}</p>
+                <p class="p-blanco-descripcion">{{ get_fecha_contratacion () }}</p>
               </ion-col>
               <ion-col size="6" class="col-padding-right ion-text-end">
                 <h6 class="h6-list-titulo">{{ 'Total aportado' | translate }}</h6>
